--- a/styles/responsive.scss
+++ b/styles/responsive.scss
@@ -23,9 +23,9 @@
         padding: 20px 30px;
     }
     p {
-        padding-top: 100%;
+        padding-top: 70%;
         font-weight: bold;
-        font-size: 500%;
+        font-size: 400%;
         text-align: center;
         margin-bottom: 0;
     }
@@ -35,7 +35,7 @@
         text-align: center;
     }
     .btn {
-        margin-top: 10%;
+        margin-top: 5%;
         border-radius: 15px;
         font-size: 100%;
         display: inline-block;
@@ -88,6 +88,51 @@
         font-size: 100%;
         display: inline-block;
         padding: 10px 15px;
+        font-weight: bold;
+    }
+}
+
+@media only screen and (min-width: 1001px) and (max-width: 1324px) {
+    nav#menu {
+        background-color: rgba(0, 0, 0, 0.7);
+        margin: 0;
+        padding: 0;
+        position: fixed;
+        width: 100%;
+    }
+    nav#menu ul {
+        margin: 0;
+        padding: 0;
+        text-align: center;
+    }
+    nav#menu ul li {
+        display: inline;
+        list-style-type: none;
+    }
+    nav#menu ul li a {
+        display: inline-block;
+        text-decoration: none;
+        font-size: 100%;
+        color: aliceblue;
+        padding: 20px 30px;
+    }
+    p {
+        padding-top: 20%;
+        font-weight: bold;
+        font-size: 500%;
+        text-align: center;
+    }
+    div#btns {
+        margin: 0 auto;
+        padding-top: 0;
+        text-align: center;
+    }
+    .btn {
+        margin-left: 0;
+        border-radius: 15px;
+        font-size: 150%;
+        display: inline-block;
+        padding: 20px 30px;
         font-weight: bold;
     }
 }
